# looppulse

./: .gitignore  DEV_NOTES.md  LICENSE  PRD.md  PROGRESS.md  README.ja.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
assets/logo-concepts/: nanobanana-prompts.md
assets/logo-concepts/image2-expanded/: A1-soft-glass-window-v2.json  A2-graphite-window-contrast.json  A3-menu-bar-monoline-window.json  A4-native-status-badge-window.json  A5-scanning-portal-window.json  C1-one-eyed-buddy-refined.json  C2-two-dot-warm-face.json  C3-capsule-observer-face.json  C4-ultra-tiny-menu-face.json  C5-status-mood-face-system.json  manifest.json
assets/logo-concepts/looppulse/: README.md
assets/logo-concepts/visionary/: 01-observation-window.json  02-radar-eye.json  03-tiny-observer-face.json  04-abstract-guan.json
docs/design/: DESIGN_SYSTEM.md  bevel-ui-implementation-plan.md  looppulse-ux-map.md  observer-ux-map.md
docs/design/bevel-reference/: README.md
docs/release/: beta-install-guide.md  macos-release.md
scripts/: clean-debug-cache.sh  release-macos-preflight.sh
src/: App.svelte  main.ts  tokens.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_statusline.rs  events.rs  focus.rs  launch_agent.rs  lib.rs  main.rs  notifications.rs  settings.rs  watcher.rs
src-tauri/src/agents/: claude.rs  codex.rs  mod.rs  opencode.rs
src/lib/: Onboarding.svelte  ShortcutRecorder.svelte  format.ts  types.ts
src/styles/: tokens.css
(+2 files in other folders)
