[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
chrono = "0.4"
libc = "0.2"
window-vibrancy = "0.6"

objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["block2", "NSEvent", "NSButton", "NSButtonCell", "NSCell", "NSClickGestureRecognizer", "NSControl", "NSGestureRecognizer", "NSImage", "NSResponder", "NSStatusBar", "NSStatusBarButton", "NSStatusItem", "NSView"] }
block2 = "0.6"
core-foundation = "0.10"
core-graphics = "0.24"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
menubar = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "observer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
